--- a/mtrf.tex
+++ b/mtrf.tex
@@ -171,7 +171,9 @@ where the smallest $k$ makes the equation true is the tensor rank of $\mathbf{T}
 
 We then group $k$ vectors $\mathbf{a}_m$, $\mathbf{b}_m$ by column into matrices $\mathbf{A} \in \mathbb{R}^{|V| \times k}$, $\mathbf{B} \in \mathbb{R}^{|R| \times k}$ and $\mathbf{c}_m$ by row into matrices $\mathbf{C} \in \mathbb{R}^{k \times d}$. 
 
-Naturally, matrix $\mathbf{A}$ can be interpreted as word embedding described above. Similar to word embedding, we can represent semantic role $b_j$ using one-hot encoded column vector $\mathbf{r}_j$ where $|\mathbf{r}_j| = |R|$ and $R$ is the set of semantic roles. So $\mathbf{B}$ can be considered as role embedding matrix. By computing inner product between $\mathbf{r}_j$ and $\mathbf{B}$ as $\mathbf{B}_{(j)} = \mathbf{r}_j \mathbf{B}$, we obtain the low-dimensional vector $\mathbf{B}_{(j)} \in \mathbb{R}^k$ which is the $j$-th row of matrix $\mathbf{B}$. From equation \eqref{eq:trd}, the vector $\mathbf{T}_{(ij)}$ can be computed as: 
+[TODO: formal interpretation] Naturally, matrix $\mathbf{A}$ can be interpreted as word embedding described above. $\mathbf{B}$ can be considered as role embedding matrix. By computing inner product between $\mathbf{r}_j$ and $\mathbf{B}$ as $\mathbf{B}_{(j)} = \mathbf{r}_j \mathbf{B}$, we obtain the low-dimensional vector $\mathbf{B}_{(j)} \in \mathbb{R}^k$ which is the $j$-th row of matrix $\mathbf{B}$. 
+
+From equation \eqref{eq:trd}, the event-participant embedding vector $\mathbf{T}_{(ij)}$ can be computed as: 
 \begin{equation} \label{eq:rbwe_tensor}
 \begin{aligned}
     \mathbf{T}_{(ij)}
@@ -179,7 +181,6 @@ Naturally, matrix $\mathbf{A}$ can be interpreted as word embedding described ab
         &= \sum_{m=1}^{k} \mathbf{a}_{m_{(i)}} \mathbf{b}_{m_{(j)}}  \mathbf{c}_m \\
 \end{aligned}
 \end{equation}
-\noindent
 To get rid of the outer product and make it easier to implement, we use the decomposition matrices defined above. Thus the vector $\mathbf{T}_{(ij)}$ can be written as a vector: 
 \begin{equation} \label{eq:rbwe}
 \begin{aligned}
@@ -189,7 +190,6 @@ To get rid of the outer product and make it easier to implement, we use the deco
 \end{aligned}
 \end{equation}
 which is a representation of a participant in an event. "$\circ$" is Hadamard product which computes element-wise multiplication between two vectors. This can be interpreted as the composition method of word embedding vector and role embedding vector. 
-
 
 
 \begin{figure}[t]
@@ -202,7 +202,46 @@ which is a representation of a participant in an event. "$\circ$" is Hadamard pr
 
 \section{Model Design}
 \subsection{Non-incremental Role Filler} \label{sec:nnrf}
-To tackle the role filler prediction task, \citet{tilk2016event} proposed the \textit{non-incremental role filler}\textbf{(NNRF)}, a 2-layer neural network model. As in Figure \ref{fig:NNRF}, from input to output, the model uses role based word representations of event participants as input. Parameters are learned together with the model. The embedding vectors are composed using sum method into an representation of event participants except the target participant. Then it passes through one non-linearity layer with parametric rectified linear unit. After that, a softmax regression classifier is used for prediction. 
+To perform the role-filler prediction, \citet{tilk2016event} proposed the \textit{non-incremental role filler} \textbf{(NNRF)} which is a 2-layer neural network model. As in Figure \ref{fig:NNRF}, from input to output, the model uses event-participant embeddings as input. Parameters are learnt together with the model. The embedding vector of the $l$-th event participant in an event can be represented as:
+\begin{equation} \label{eq:rbe_nnrf}
+\begin{aligned}
+    \mathbf{p}_l
+        &= (\mathbf{w}_i \mathbf{A}_e \circ \mathbf{r}_j \mathbf{B}_e) \mathbf{C}_e \\
+\end{aligned}
+\end{equation}
+The embedding vectors are composed using sum method into an representation of words except the target word as:
+\begin{equation} \label{eq:mean_comp}
+\begin{aligned}
+    \mathbf{e}
+        &= \sum_{l=1}^{L} \mathbf{p}_{l} \\
+\end{aligned}
+\end{equation}
+where $l$ is the index of the participant and $L$ is the number of participants in current event $e$. Then it passes through one non-linearity layer with parametric rectified linear unit \citep{he2015delving} as follow:
+\begin{equation} \label{eq:nonlinearity}
+\begin{aligned}
+    \mathbf{h}
+        &= PReLU(\mathbf{e} + \mathbf{b}_e) \\
+\end{aligned}
+\end{equation}
+where $\mathbf{b}_e$ is the bias vector of this layer. After that, a softmax regression classifier is used for prediction. The output vector of this classifier is computed as:
+\begin{equation} \label{eq:output}
+\begin{aligned}
+    \mathbf{o}
+        &= \mathbf{h}\mathbf{W}_c + \mathbf{b}_c \\
+\end{aligned}
+\end{equation}
+where $\mathbf{W}_c\in \mathbb{R}^{d \times |V|}$ is a weight matrix of the target word classifier and $\mathbf{b}_c$ is the corresponding bias. The conditional probability of target word $a_x$ given event $e$ and target role $b_y$ is:
+\begin{equation} \label{eq:softmax}
+\begin{aligned}
+    p(a_x | e, b_y)
+        &= Softmax(\mathbf{o})_{(x)} \\
+        &= \frac{
+        exp(\mathbf{o})_{(x)}
+        }{
+        \sum_{i=1}^{|V|} exp(\mathbf{o})_{(i)} }   \\
+\end{aligned}
+\end{equation}
+where suffix $(x)$ is the $x$-th element of the vector. 
 
 
 \begin{figure}[t]
@@ -210,6 +249,8 @@ To tackle the role filler prediction task, \citet{tilk2016event} proposed the \t
 \includegraphics[width=0.7\textwidth]{MTNNRF.png}
 \caption{\label{fig:MTNNRF} Model architecture of multitask version of non-incremental role filler.}
 \end{figure}
+
+
 
 
 In the \textbf{NNRF} model, embedding vectors of event participants are sum up together to represent the whole event. Nonetheless, this is only a simple method to composite event participants. Each participant has same weight in the event. Additionally, means of parameters can shift in a large range the after the sum operation. How can we improve this? We need an exploration of composition methods. \\
